--- a/src/components/PopupContainer/PopupContainer.scss
+++ b/src/components/PopupContainer/PopupContainer.scss
@@ -4,6 +4,7 @@
     position: relative;
     max-width: 800px;
     min-width: 300px;
+    max-height: 538px;
 
     &-horiz {
         overflow-x: auto;
